added create single PIN api. added tests.
